--- a/warehouse/static/ngTemplates/app.warehouse.default.html
+++ b/warehouse/static/ngTemplates/app.warehouse.default.html
@@ -52,6 +52,11 @@
         <i class="fa fa-plus"></i> Generate
       </button>
     </div> -->
+    <div class="row" style="margin:20px">
+      <button type="button" class="btn btn-default bgn-lg pull-right" ng-click="invoiceDetails()">
+        Invoices
+      </button>
+    </div>
     <div class="row" style="margin:20px" ng-if="invData.length==0">
       <span class="text-center text-muted">
         <h2>No Invoices...</h2><br>
