--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -88,7 +88,7 @@
         <div class="col-md-offset-2 col-md-8">
           <table class="table table-striped" style="margin-top:20px;">
             <th>
-              SKU
+              Serial No.
             </th>
             <th>
               Product Weight
