--- a/POS/static/ngTemplates/app.POS.invoices.html
+++ b/POS/static/ngTemplates/app.POS.invoices.html
@@ -35,15 +35,15 @@
 
 </div>
 <div class="row" ng-if="posShowAll">
-  <div class="col-md-5">
+  <div class="col-md-4">
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-6">
         <div class="form-group">
           <label>Invoice Serial Number</label>
           <input type="text" class="form-control" placeholder="Invoice Serial Number" ng-model="form.serialNumber">
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-6">
         <div class="form-group">
           <label>Invoice Date</label>
           <div class="input-group">
@@ -56,7 +56,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-7">
+  <div class="{{multiStore ? 'col-md-6':'col-md-8'}}">
     <div class="row">
       <div class="col-md-3">
         <div class="form-group">
@@ -102,6 +102,12 @@
       </div>
 
 
+    </div>
+  </div>
+  <div class="col-md-2" ng-if="multiStore" >
+    <div class="form-group">
+      <label>Store :</label>
+      <input uib-typeahead="store as store.name for store in storeSearch($viewValue)" ng-model="storeForm.name" type="text" class="form-control" placeholder="Search By Store Name">
     </div>
   </div>
 </div>
@@ -234,7 +240,7 @@
       </td>
       <td>
         <span ng-if="item.data.pk&&item.data.productVariant!=null">{{ ((item.quantity * item.data.productVariant.price) +  (item.data.product.productMeta ? (item.quantity * (item.data.product.productMeta.taxRate * item.data.productVariant.price / 100)) : 0)) }}</span>
-        
+
         <span ng-if="item.data.pk&&item.data.productVariant==null">{{ ((item.quantity * item.data.product.price) +  (item.data.product.productMeta ? (item.quantity * (item.data.product.productMeta.taxRate * item.data.product.price / 100)) : 0)).toFixed(2) }}</span>
 
       </td>
