--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -1,6 +1,7 @@
 <div class="col-md-3 animated fadeIn" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
-  <div class="container-fluid">
-    <div class="row">
+
+  <div class="container-fluid" >
+    <div class="row" style="{{data.is_active ? 'background:white;':'background:rgb(221, 221, 221);'}}">
       <div class="container-fluid card" style="padding-bottom:0px;">
         <div class="row" style="border-bottom: 1px solid #dedede;">
           <div class="col-md-4" style="padding:0px;">
@@ -9,7 +10,7 @@
           </div>
           <div class="col-md-8" style="position:relative;display:block;">
             <div class="row" style="padding-left:10px;">
-              <h3>{{data.first_name + ' ' + data.last_name}}</h3>
+              <h3>{{data.first_name + ' ' + data.last_name}} </h3>
               <span class="text-muted" style="position:absolute; top:10px;right:10px;">
                 <i class="fa fa-hashtag"></i> <span style="font-size:14px;">{{data.pk}}</span>
               </span>
@@ -20,7 +21,6 @@
           <div class="container-fluid">
             <span ng-if="data.profile.mobile != null"><strong><i style="width:30px;" class="fa fa-mobile"></i> </strong>{{data.profile.mobile}}</span> <br>
             <span ng-if="data.email != null"><strong><i style="width:30px;" class="fa fa-envelope"></i> </strong>{{data.email}}</span>
-
             <span ng-if="data.profile.mobile == null && data.email == null" class="text-muted">No contact details</span>
           </div>
         </div>
