--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -337,7 +337,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row card" style="margin-bottom:15px" ng-if="!saved&&savedAddress.length>0">
+                <!-- <div class="row card" style="margin-bottom:15px" ng-if="!saved&&savedAddress.length>0">
                   <div class="row card bg-blue" style="margin-left:0px;margin-right:0px">
                     <h5 style="padding-left:10px;color:white"> DELIVERY ADDRESS </h5>
                   </div>
@@ -401,15 +401,6 @@
                               </div>
                             </div>
                           </div>
-                          <!-- <div class="row" style="margin-bottom:35px">
-
-                            <div class="col-sm-6 col-xs-12 col-md-6">
-                              <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none">
-                        <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
-                      </button>
-
-                            </div>
-                          </div> -->
                           <div class="row" style="margin-bottom:35px">
                             <div class="hidden-xs col-md-12 col-sm-6">
                               <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk">Update</button>
@@ -434,7 +425,6 @@
                   <div class=" btn btn-block btn-default" ng-click="resetAdd()">
                     Add a New Address
                   </div>
-
                   <div class="row" ng-if="newAdr" style="padding-left:25px;padding-right:25px">
                     <div class="form-group">
                       <input type="text" class="form-control" id="ldm" ng-model="data.address.mobileNo" placeholder="Enter Mobile Number...">
@@ -495,12 +485,220 @@
                       <i class="fa fa-close fa-lg"></i> &nbsp;Cancel
                       </button>
                       </div>
+                    </div>
+                  </div>
+                </div> -->
 
 
+                <div class="row card" style="margin-bottom:15px" ng-if="!saved&&savedAddress.length>0">
+                  <div class="row card bg-blue" style="margin-left:0px;margin-right:0px">
+                    <h5 style="padding-left:10px;color:white"> DELIVERY ADDRESS </h5>
+                  </div>
+                  <div class="col-md-12" ng-repeat="adr in savedAddress">
+                    <div class="row" style="margin-top:15px">
+                      <div class="col-md-1 col-xs-1 col-sm-1">
+                        <input ng-model="check" type="radio" name="radio" value="adr.pk" ng-click="show($index)">
+                      </div>
+                      <div class="col-md-10 col-xs-7 col-sm-10">
+                        <div class="row">
+                          <strong>{{adr.title}}</strong><br/> {{adr.landMark}} {{adr.street}}, {{adr.city}}, {{adr.state}}, {{adr.country}} - {{adr.pincode}}
+                        </div>
+
+                        <div class="row" ng-if="$index==idx">
+                        </br>
+                          <div class="col-md-6 hidden-xs col-sm-6" style="margin-left:0px;padding-left:0px">
+                            <div class=" btn btn-block btn-primary" ng-click="ChangeAdd($index,'use')">
+                              Use This Address
+                            </div>
+                            <!-- <div class="checkbox">
+                              <label><input type="checkbox" value="checked" ng-model="sameAsShipping">&nbsp; Billing Address Same as Shipping</label>
+                            </div> -->
+                          </div>
+                          <div class="col-xs-12 hidden-sm hidden-lg hidden-md" >
+                            <div class=" btn btn-block btn-primary" ng-click="ChangeAdd($index,'use')" >
+                              Use This
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row" ng-if="addressview&&$index==idxVal">
+                          <h4>Address</h4>
+                          <div class="form-group">
+                            <input type="text" class="form-control" id="ldm" ng-model="data.address.mobileNo" placeholder="Enter Mobile Number...">
+                          </div>
+                          <div class="form-group">
+
+                            <textarea ng-model="data.address.street" class="form-control" id="street" placeholder="Enter street.."></textarea>
+                          </div>
+                          <div class="form-group">
+
+                            <input type="text" class="form-control" id="ldm" ng-model="data.address.landMark" placeholder="Enter Landmark..">
+                          </div>
+                          <div class="row">
+                            <div class="col-md-6 col-xs-12 col-sm-6">
+                              <div class="form-group">
+                                <input ng-model="data.address.pincode" type="text" class="form-control" id="pincode" placeholder="Enter Pincode..">
+                              </div>
+                            </div>
+                            <div class="col-md-6 col-xs-12 col-sm-6">
+                              <div class="form-group">
+                                <input ng-model="data.address.state" type="text" class="form-control" id="state" placeholder="Enter State.." disabled>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-6 col-xs-12 col-sm-6">
+                              <div class="form-group">
+                                <input ng-model="data.address.city" type="text" class="form-control" id="city" placeholder="Enter City.." disabled>
+                              </div>
+                            </div>
+                            <div class="col-md-6 col-xs-12 col-sm-6">
+                              <div class="form-group">
+                                <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country.." disabled>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="row" style="margin-bottom:35px">
+                            <div class="hidden-xs col-md-12 col-sm-6">
+                              <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk">Update</button>
+                              <button type="button" class="btn btn-primary" ng-click="cancel()" ng-if="data.address.pk" >Cancel</button>
+                            </div>
+                            <div class="checkbox hidden-xs col-md-12 col-sm-6">
+                              <label><input type="checkbox" value="checked" ng-model="dataToSend.sameAsShipping">&nbsp; Billing Address Same as Shipping</label>
+                            </div>
+                            <div ng-if = "showFields">
+                              <div class="form-group">
+
+                                <textarea ng-model="data.billingAddress.street" class="form-control" id="street" placeholder="Enter street.."></textarea>
+                              </div>
+                              <div class="form-group">
+
+                                <input type="text" class="form-control" id="ldm" ng-model="data.billingAddress.landMark" placeholder="Enter Landmark..">
+                              </div>
+                              <div class="row">
+                                <div class="col-md-6 col-xs-12 col-sm-6">
+                                  <div class="form-group">
+                                    <input ng-model="data.billingAddress.pincode" type="text" class="form-control" id="pincode" placeholder="Enter Pincode..">
+                                  </div>
+                                </div>
+                                <div class="col-md-6 col-xs-12 col-sm-6">
+                                  <div class="form-group">
+                                    <input ng-model="data.billingAddress.state" type="text" class="form-control" id="state" placeholder="Enter State.." disabled>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row">
+                                <div class="col-md-6 col-xs-12 col-sm-6">
+                                  <div class="form-group">
+                                    <input ng-model="data.billingAddress.city" type="text" class="form-control" id="city" placeholder="Enter City.." disabled>
+                                  </div>
+                                </div>
+                                <div class="col-md-6 col-xs-12 col-sm-6">
+                                  <div class="form-group">
+                                    <input ng-model="data.billingAddress.country" type="text" class="form-control" id="country" placeholder="Enter Country.." disabled>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="hidden-lg hidden-md hidden-sm col-xs-12 ">
+                              <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk" style="width:100%">Update</button><br/><br/>
+                              <button type="button" class="btn btn-primary" ng-click="cancel()" ng-if="data.address.pk" style="width:100%">Cancel</button>
+                            </div>
+                          </div>
+
+                        </div>
+                      </div>
+                      <div class="col-md-1 col-sm-1 col-sm-1" ng-if="$index==idx" ng-click="ChangeAdd($index,'edit')" style="cursor:pointer">
+                        <strong>Edit</strong>
+                      </div>
 
                     </div>
                   </div>
                 </div>
+                <div class="row card" style="margin-bottom:15px;padding-bottom:0px" ng-if="!saved">
+                  <div class=" btn btn-block btn-default" ng-click="resetAdd()">
+                    Add a New Address
+                  </div>
+                  <div class="row" ng-if="newAdr" style="padding-left:25px;padding-right:25px">
+                    <div class="form-group">
+                      <input type="text" class="form-control" id="ldm" ng-model="data.address.mobileNo" placeholder="Enter Mobile Number...">
+                    </div>
+                    <div class="form-group">
+
+                      <textarea ng-model="data.address.street" class="form-control" id="street" placeholder="Enter street.."></textarea>
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" id="ldm" ng-model="data.address.landMark" placeholder="Enter Landmark..">
+                    </div>
+                    <div class="row">
+                      <div class="col-md-5 col-xs-12 col-sm-6">
+                        <div class="form-group">
+                          <input ng-model="data.address.pincode" type="text" class="form-control" id="pincode" placeholder="Enter Pincode..">
+                        </div>
+                      </div>
+
+                      <div class="col-md-5 col-xs-12 col-sm-6">
+                        <div class="form-group">
+                          <input ng-model="data.address.state" type="text" class="form-control" id="state" placeholder="Enter State.." disabled>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-5 col-xs-12 col-sm-6">
+                        <div class="form-group">
+                          <input ng-model="data.address.city" type="text" class="form-control" id="city" placeholder="Enter City.." disabled>
+                        </div>
+                      </div>
+                      <div class="col-md-5 col-xs-12 col-sm-6">
+                        <div class="form-group">
+                          <input ng-model="data.address.country" type="text" class="form-control" id="country" placeholder="Enter Country.." disabled>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row" style="margin-bottom:35px">
+                      <div class="hidden-xs col-md-12 col-sm-6" ng-if="showMessage">
+                        <span style="color:red">Sorry!! We Don't Service in this Area
+                      </div>
+                      <div class="hidden-xs col-md-12 col-sm-6" >
+                        <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none">
+                        <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
+                      </button>
+                        <button type="button" class="btn btn-primary" ng-click="cancel()" ng-if="data.address.pk == none" >
+                      Cancel
+                      </button>
+                      </div>
+                      <div class="hidden-lg hidden-md hidden-sm col-xs-12 " ng-if="showMessage">
+                        <span style="color:red">Sorry!! We Don't Service in this Area
+                      </div>
+
+                      <div class="hidden-lg hidden-md hidden-sm col-xs-12">
+                        <button type="button" class="btn btn-warning" ng-click="saveAdd()" ng-if="data.address.pk == none" style="width:100%">
+                        <i class="fa fa-star fa-lg"></i> &nbsp;Save for later use
+                      </button><br/><br/>
+                        <button type="button" class="btn btn-primary" ng-click="cancel()" ng-if="data.address.pk == none" style="width:100%">
+                      <i class="fa fa-close fa-lg"></i> &nbsp;Cancel
+                      </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 <div class="row card" style="margin-bottom:15px;padding-bottom:0px" ng-if="saved">
 
 
