--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -8,27 +8,33 @@
     <div class="col-xs-6 ">
       <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:55px;cursor:pointer;" alt="">
     </div>
+
+
     <div class="col-xs-6 " style="padding-top:2vh;">
-        <div class="well" class="dropdown-toggle" ng-mouseenter="onBtnEnter = true;resetAll()"  ng-mouseleave="onBtnEnter = false" style="padding:0px;height: 5vh;cursor:pointer">
+        <div class="well shopByCatDiv" class="dropdown-toggle" ng-mouseenter="onBtnEnter = true;resetAll()"  ng-mouseleave="onBtnEnter = false">
           <span class="align-middle" style="color:var(--themeColor)">Shop By Category &nbsp;<i class="fa fa-caret-down"></i></span>
         </div>
-        <!-- ng-show="onBtnEnter||onDropdownEnter" -->
-        <div  style="position:absolute;top:7vh;min-width:200px" ng-show="onBtnEnter||onDropdownEnter||onChildEnter">
-          <div class="well" ng-mouseenter="onDropdownEnter = true;"  ng-mouseleave="onDropdownEnter = false" style="text-align:left;padding-bottom:0px;padding-top:5px;min-height:60vh;border:1px solid var(--themeColor);{{onDropdownEnter||onChildEnter ?'border-right:none':''}}">
-              <p ng-repeat="c in categoriesList" style="cursor:pointer;margin-bottom:2px;font-size:18px;color:{{c.pk==childData.pk?'#e47911':''}}" ng-style="overStyle" ng-mouseenter="overStyle={color: '#e47911'};selectedOne(c)" ng-click="$state.go('categories' , {name : c.name.split(' ').join('_')})" class="zoomOnHover" >{{c.name}} &nbsp;<i class="fa fa-chevron-right text-right"  style="{{c.pk==childData.pk?'font-size:15px':'font-size:12px;color:#716e71'}}"></i>
-              <div  style="position:absolute;left:100%;top:0px;min-width:300px" ng-show="onDropdownEnter||onChildEnter">
-                <div class="well" ng-mouseenter="onChildEnter = true"  ng-mouseleave="onChildEnter = false" style="text-align:left;padding-bottom:5px;min-height:60vh;border:1px solid var(--themeColor);border-left:none;position:relative">
-                  <!-- <div class="text-center" style="font-size:22px;">{{childData.name}}</div> -->
-                    <p ng-repeat="child in childData.child" style="cursor:pointer;margin-bottom:2px;font-size:18px" ng-style="overStyle" ng-mouseenter="overStyle={color: '#e47911'}"  ng-mouseleave="overStyle={color: ''}" ng-click="$state.go('categories' , {name : child.name.split(' ').join('_')})" class="zoomOnHover">{{child.name}}</p>
+        <div class="categoryDropDown" ng-show="onBtnEnter||onDropdownEnter||onChildEnter">
+          <div class="well categoryMenu" ng-mouseenter="onDropdownEnter = true;"  ng-mouseleave="onDropdownEnter = false" style="{{onDropdownEnter||onChildEnter ?'border-right:none;border-radius:5px 0px 0px 5px;':'border-radius:5px;'}}">
+              <p ng-repeat="c in categoriesList" class="categoriesItems" ng-mouseenter="selectedOne(c)" ng-click="$state.go('categories' , {name : c.name.split(' ').join('_')})" >
+                <span style="float:left" class="categoryItemName">{{c.name}}</span>
+                <span style="float:right" class="categoryItemArrow"><i class="fa fa-chevron-right"></i></span>
+              </p>
+              <div class="leftSubCatDiv" ng-show="onDropdownEnter||onChildEnter">
+                <div class="well" ng-mouseenter="onChildEnter = true"  ng-mouseleave="onChildEnter = false" style="text-align:left;padding-bottom:5px;min-height:60vh;border:1px solid var(--themeColor);border-left:none;position:relative; border-left:1px solid #e0e0e0; border-radius: 0px 5px 5px 0px;">
+                    <p ng-repeat="child in childData.child" class="categoriesSubItems" ng-click="$state.go('categories' , {name : child.name.split(' ').join('_')})" >{{child.name}}</p>
                   <span>
-                    <img ng-src="{{childData.img}}" style="width:200px;right:0px;bottom:0px;position:absolute">
+                    <img class="catDropDownImg" ng-src="{{childData.img}}">
                   </span>
                 </div>
               </div>
-              </p>
           </div>
+
         </div>
     </div>
+
+
+
   </div>
 
   <div class="col-xs-2 hidden-md hidden-lg">
