--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.form.genericProduct.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.form.genericProduct.html
@@ -12,10 +12,22 @@
     <auto-complete source="getFieldsSuggestions($query)" load-on-down-arrow="true"></auto-complete>
   </tags-input>
 </div>
-<div class="form-group">
-  <label> Min Cost</label>
-  <input ng-model="form.minCost" type="number" class="form-control" placeholder="Starting price for this product">
+<div class="row">
+  <div class="col-md-8">
+    <div class="form-group">
+      <label> Min Cost</label>
+      <input ng-model="form.minCost" type="number" class="form-control" placeholder="Starting price for this product">
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="form-group">
+      <input ng-model="form.restricted" type="checkbox">
+      <label> Restricted ?</label>
+    </div>
+  </div>
 </div>
+
+
 <div class="form-group">
   <label> Visual</label>
   <input type="file" file-model="form.visual">
