--- a/ecommerce/static/ngTemplates/app.ecommerce.account.menu.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.menu.html
@@ -1,4 +1,4 @@
-<div class="row" style="padding-left:48%; padding-top:20px;">
+<div class="row" style="padding-left:48%; padding-top:20px;color:white">
   <i class="fa fa-user fa-4x"></i>
 </div>
 
@@ -6,7 +6,7 @@
   Accounts
 </h4>
 <hr>
-<div style="position:absolute;left:0px;width:100%;display:block;" class="bg-blue">
+<div style="position:absolute;left:0px;width:100%;display:block;">
   <ul class="nav padded sidebar-checkout" style="width:100%;padding:0px;margin:0px;display:block;height:603px;">
     <li ng-class="{activeTab: $state.is('account.cart')}">
       <a ui-sref="account.cart">
