--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -1,8 +1,8 @@
 <div class="container-fluid bg-white" style="position:relative; width:100%; bottom:0px; padding:20px;padding-top:0px;margin-top:20px">
   <div class="row" style="border-top:3px solid #eeeeee;border-bottom:3px solid #eeeeee">
-    <div class="col-md-12 hidden-sm hidden-xs">
-      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;">
-        <div class="row">
+    <div class="col-md-12 hidden-sm hidden-xs" ng-if="me.pk">
+      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;cursor:pointer">
+        <div class="row" ui-sref="account.orders">
           <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-map-marker fa-lg pull-right"></i>
           </div>
@@ -14,8 +14,8 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;">
-        <div class="row">
+      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;cursor:pointer">
+        <div class="row" ui-sref="account.orders">
           <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-refresh fa-lg pull-right"></i>
           </div>
@@ -27,8 +27,8 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 hidden-sm hidden-xs">
-        <div class="row">
+      <div class="col-md-4 hidden-sm hidden-xs" style="cursor:pointer">
+        <div class="row" ui-sref="account.orders">
           <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-times-circle-o fa-lg pull-right"></i>
           </div>
@@ -38,22 +38,60 @@
         </div>
       </div>
     </div>
-    <div class="col-xs-12 hidden-lg hidden-md">
+    <div class="col-md-12 hidden-sm hidden-xs" ng-if="!me.pk">
+      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;cursor:pointer">
+        <div class="row" ng-click="loginPage()">
+          <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-map-marker fa-lg pull-right"></i>
+          </div>
+          <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
+            <h2> <i class="fa fa-map-marker fa-lg pull-right"></i></h2>
+          </div> -->
+          <div class="col-md-6 hidden-sm hidden-xs" style="font-size:15px;padding-top:20px">
+            <span class="text-center">TRACK YOUR <br>ORDER</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 hidden-sm hidden-xs" style="border-right:3px solid #eeeeee;cursor:pointer">
+        <div class="row" ng-click="loginPage()">
+          <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-refresh fa-lg pull-right"></i>
+          </div>
+          <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
+            <h2> <i class="fa fa-refresh fa-lg pull-right"></i></h2>
+          </div> -->
+          <div class="col-md-6 hidden-sm hidden-xs" style="font-size:15px;padding-top:20px">
+            <span class="text-center">FREE & EASY <br>RETURNS</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 hidden-sm hidden-xs" style="cursor:pointer">
+        <div class="row" ng-click="loginPage()">
+          <div class="col-md-6 hidden-sm hidden-xs" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-times-circle-o fa-lg pull-right"></i>
+          </div>
+          <div class="col-md-6 hidden-sm hidden-xs" style="font-size:15px;padding-top:20px">
+            <span class="text-center">ONLINE <br>CANCELLATION</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 hidden-lg hidden-md" ng-if="me.pk">
 
-        <div class="row">
+        <div class="row" ui-sref="account.orders" style="cursor:pointer">
           <div class="col-xs-5   hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-map-marker fa-lg pull-right"></i>
           </div>
           <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
             <h2> <i class="fa fa-map-marker fa-lg pull-right"></i></h2>
           </div> -->
-          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px" >
             <span class="text-center">TRACK YOUR <br>ORDER</span>
           </div>
         </div>
 
 
-        <div class="row">
+        <div class="row" ui-sref="account.orders" style="cursor:pointer">
           <div class="col-xs-5  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-refresh fa-lg pull-right"></i>
           </div>
@@ -66,7 +104,45 @@
         </div>
 
 
-        <div class="row">
+        <div class="row" ui-sref="account.orders" style="cursor:pointer">
+          <div class="col-xs-5  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-times-circle-o fa-lg pull-right"></i>
+          </div>
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+            <span class="text-center">ONLINE <br>CANCELLATION</span>
+          </div>
+        </div>
+
+    </div>
+    <div class="col-xs-12 hidden-lg hidden-md" ng-if="!me.pk">
+
+        <div class="row" ng-click="loginPage()" style="cursor:pointer">
+          <div class="col-xs-5   hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-map-marker fa-lg pull-right"></i>
+          </div>
+          <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
+            <h2> <i class="fa fa-map-marker fa-lg pull-right"></i></h2>
+          </div> -->
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px" >
+            <span class="text-center">TRACK YOUR <br>ORDER</span>
+          </div>
+        </div>
+
+
+        <div class="row" ng-click="loginPage()" style="cursor:pointer">
+          <div class="col-xs-5  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
+            <i class="fa fa-refresh fa-lg pull-right"></i>
+          </div>
+          <!-- <div class="col-xs-6" style="padding:15px 0px;padding-bottom:30px">
+            <h2> <i class="fa fa-refresh fa-lg pull-right"></i></h2>
+          </div> -->
+          <div class="col-xs-7  hidden-lg hidden-md" style="font-size:15px;padding-top:20px">
+            <span class="text-center">FREE & EASY <br>RETURNS</span>
+          </div>
+        </div>
+
+
+        <div class="row" ng-click="loginPage()" style="cursor:pointer">
           <div class="col-xs-5  hidden-lg hidden-md" style="padding:25px 0px;padding-bottom:30px;font-size:35px">
             <i class="fa fa-times-circle-o fa-lg pull-right"></i>
           </div>
